--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -5,3 +5,53 @@ dark-blue: #0a2c42;
 grey: #bfbfbf;
 font-family: Arial, Helvetica, sans-serif;
 */
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 0em;
+}
+nav {
+  background-color: #2081c3;
+  color: white;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+  padding: 2em;
+}
+ul {
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+}
+
+img {
+  max-width: 4em;
+}
+
+.single-beer {
+  display: flex;
+  flex-direction: row;
+}
+
+.all-beers {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: stretch;
+  margin: 2em 4em;
+}
+.all-beers div {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
